# visual-finetune-lab

./: .env.example  .gitignore  COPILOT_CONTEXT.md  Dockerfile  MONDAY_PLAN.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
azure/: container-app.yml
notebooks/: colab_finetune.ipynb  pipeline.ipynb
scripts/: run_pipeline.py  test_invoice.py
src/visual_finetune_lab/: __init__.py
src/visual_finetune_lab/dataset/: __init__.py  synthetic_generator.py
src/visual_finetune_lab/evaluation/: __init__.py  evaluator.py
src/visual_finetune_lab/preprocessing/: __init__.py  image_processor.py
src/visual_finetune_lab/serving/: api.py
src/visual_finetune_lab/tracking/: __init__.py  mlflow_tracker.py
src/visual_finetune_lab/training/: __init__.py  lora_trainer.py
tests/: conftest.py  test_dataset.py  test_invoice_integration.py  test_preprocessing.py  test_serving.py
